@@ -95,3 +95,4 @@ ATTR_NODE_properties,
 ATTR_NODE_np,
 ATTR_NODE_ntype,
 ATTR_NODE_status,
+ATTR_NODE_note,
